# petStore-impl/src/main/scala/com/github/romastyi/api/service/PetStoreServiceImpl.scala
@@ -4,6 +4,8 @@ package com.github.romastyi.api.service
   * Created by romastyi on 05.05.17.
   */
 
+import java.io.File
+
 import com.github.romastyi.api.domain.UserModel
 import com.github.romastyi.api.model._
 
@@ -80,8 +82,40 @@ object PetStoreServiceImpl extends PetStoreService[Future] {
     *
     *
     */
-  override def findPetByTag(tag: PetStoreService.FindPetByTagTag.Value, user: UserModel): Future[FindPetByTagResponse] = {
+  override def findPetByTag(tag: FindPetByTagTag.Value, user: UserModel): Future[FindPetByTagResponse] = {
     Future.successful(FindPetByTagOk(pets.find(_.tag.getOrElse(Nil).contains(tag)).get))
+  }
+
+  /**
+    *
+    *
+    * @param id     ID of pet that needs to be updated
+    * @param name   Updated name of the pet
+    * @param status Updated status of the pet
+    * @param logged Current logged user
+    */
+  override def updatePetWithForm(id: Long, name: String, status: Option[String], logged: UserModel): Future[UpdatePetWithFormResponse] = {
+    Future.successful(UpdatePetWithFormOk(Pet(
+      id = id,
+      name = name,
+      tag = status.map(PetTag.withName).map(List(_))
+    )))
+  }
+
+  /**
+    *
+    *
+    * @param petId              ID of pet to update
+    * @param additionalMetadata Additional data to pass to server
+    * @param file               file to upload
+    * @param logged             Current logged user
+    */
+  override def uploadFile(petId: Long, additionalMetadata: Option[String], file: File, logged: UserModel): Future[UploadFileResponse] = {
+    Future.successful(UploadFileOk(ApiResponse(
+      code = Some(200),
+      `type` = additionalMetadata,
+      message = None
+    )))
   }
 
 }
